[tool.poetry]
name = "pysuit"
version = "0.1.0"
description = "This package will resolve all small intigrities of python data structures(List,Tuple,Dictionary,Set) which are not provided by-default."
authors = ["Deepak Patidar <deepakp@thoughtwin.com>"]
keywords = ['py-suite','suite','python bugs', 'features','py-features']
readme = 'README.md'
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.7.0"
pytest = "^7.1.3"
Faker = "^14.2.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
